# pytorch_extension_template

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/: example.h  types.h
notebooks/: 00-Test.ipynb
src/: example.cpp  raytracing.cpp  test.cpp
